# CAD_to_OpenMC

./: .readthedocs.yaml  README.md  bibliography.bib  implicit_complement.ipynb  material_definitions.ipynb  paper.md  pincell1.ipynb  pyproject.toml  reactor_example1.ipynb  requirements.txt
.github/workflows/: micromamba-install.yml  pipbuild.yml  python-app-full.yml  python-app.yml
LICENSES/: MIT.txt
docs/: environment.yml  index.rst
docs/source/: CAD_to_OpenMC.rst  api.rst  bibliography.bib  conf.py  fullscale.md  index.rst  install.md  usage.md
scripts/: c2omc_crashtest.py  c2omc_step2h5m.py
src/CAD_to_OpenMC/: __init__.py  assembly.py  assemblymesher.py  assemblymesher_base.py  assemblymesher_cq.py  assemblymesher_cq2.py  assemblymesher_db.py  assemblymesher_gmsh.py  check_step.py  cq_serialize.py  datadirectory.py  meshutils.py  object_factory.py  stl_utils.py
tests/: OMC_DAGMC_run.py  __init__.py  harnessRun.py  test_OMC_DAGMC.py  test_cqstl.py  test_cqstl2.py  test_db.py  test_gmsh.py  test_self_contained.py  test_tags.py  test_transform.py
