[project]
name="CAD_to_OpenMC"
version="1.0.1"
authors = [
  { name="Erik B Knudsen", email="erik.knudsen@copenhagenatomics.com" },
]
description = "Package to automagically convert step-geometries to h5m descriptions for neutronics by OpenMC"
readme = "README.md"
requires-python = "==3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
]
dependencies=[
        'gmsh==4.14.0',
        'numpy==2.3.2',
        'pyparsing==3.2.3',
        'cadquery==2.5.2',
        'cadquery-ocp==7.7.2',        
        'networkx==3.5',
        'unidecode==1.4.0',
        'h5py==3.14.0',
]

[project.urls]
"Homepage" = "https://github.com/openmsr/CAD_to_OpenMC"
"Bug Tracker" = "https://github.com/openmsr/CAD_to_OpenMC/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
